--- a/src/components/search.less
+++ b/src/components/search.less
@@ -4,10 +4,7 @@
   // height: 340px;
   width: 100%;
   transform: all 1s;
-  &-container {
-    margin-top: 20px;
-    padding-right: 10px;
-
+  .list {
     .ant-list-item {
       cursor: pointer;
       padding-left: 12px;
@@ -16,16 +13,20 @@
         background-color: #ddd;
       }
     }
-  }
-  &-list {
-    &-item {
-      &--title {
-        width: 80%;
+    &-container {
+      margin-top: 20px;
+      padding-right: 10px;
+    }
+    &-list {
+      &-item {
+        &--title {
+          width: 80%;
+        }
       }
     }
-  }
-  &-footer {
-    height: 32px;
-    line-height: 32px;
+    &-footer {
+      height: 32px;
+      line-height: 32px;
+    }
   }
 }
